--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,23 @@
-#turn on url rewriting 
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule (.*) $1.php [L]
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule (.*) $1.html [L]
-#RewriteCond %{HTTPS} off
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-#RewriteCond %{SERVER_PORT} 8088
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-#RewriteCond %{HTTP_HOST} !^www\. [NC]
-#RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]
-
-# BEGIN WordPress
-<IfModule mod_rewrite.c>
+# เปิดใช้งานการเขียน URL ใหม่
 RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-</IfModule>
 
-# END WordPress
+# ซ่อนนามสกุล .php จาก URL
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*)$ $1.php [L]
+
+# ซ่อนนามสกุล .html จาก URL
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*)$ $1.html [L]
+
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteBase /
+
+    # ยกเว้น index.php จากการเขียน URL ใหม่
+    RewriteRule ^index\.php$ - [L]
+
+    # ส่งคำขอไปยัง index.php หากไม่ตรงกับไฟล์หรือโฟลเดอร์จริง
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ /index.php [L]
+</IfModule>
