--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "vlucas/phpdotenv": "^5.6",
         "mpdf/mpdf": "^8.2",
         "cboden/ratchet": "^0.4.4",
-        "react/socket": "^1.16"
+        "react/socket": "^1.16",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
