--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
+    "autoload": {
+        "psr-4": {
+            "MyApp\\": "src"
+        }
+    },
     "require": {
         "firebase/php-jwt": "^6.10",
         "vlucas/phpdotenv": "^5.6",
         "mpdf/mpdf": "^8.2",
-        "cboden/ratchet": "^0.4.4",
-        "react/socket": "^1.16",
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "cboden/ratchet": "^0.4.4"
     }
 }
