--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DB_NAME_HTTP="greentech_db"
 
 DB_HOST_HTTPS="localhost"
 DB_USER_HTTPS="tdi2018admin"
-DB_PASSWORD_HTTPS="iydcmiofkiN1234"
+DB_PASSWORD_HTTPS="97cE!A9#rX2@"
 DB_NAME_HTTPS="greentech_db"
