แก้ชื่อคนเข้าตาราง

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DB_PASSWORD_HTTP=""
 DB_NAME_HTTP="greentech_db"
 
 DB_HOST_HTTPS="localhost"
-DB_USER_HTTPS="tdi2018admin"
+DB_USER_HTTPS="admingreentech"
 DB_PASSWORD_HTTPS="97cE!A9#rX2@"
 DB_NAME_HTTPS="greentech_db"
